// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components /forms SelectField 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="makeStyles-dropdown-626"
    onClick={[Function]}
  >
    <div
      className="MuiInputBase-root-630 makeStyles-root-627 makeStyles-root-629"
      onClick={[Function]}
      role="button"
    >
      <input
        autoComplete="off"
        className="MuiInputBase-input-640 makeStyles-input-628"
        name="SELECT_FIELD_ATTR"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={true}
        type="text"
        value=""
      />
    </div>
    <img
      alt="Phone Menu"
      className="makeStyles-root-646 makeStyles-noShrink-647"
      height="5"
      src="selectChevron.svg"
      width="8"
    />
  </div>
</form>
`;

exports[`Storyshots Components Buttons 1`] = `
<div
  className="MuiBox-root-1 MuiBox-root-2"
>
  <div
    className="MuiBox-root-1 MuiBox-root-3"
  >
    <button
      className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Hower
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-24"
  >
    <button
      className="MuiButtonBase-root-21 MuiButtonBase-disabled-22 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-disabled-16"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Disabled
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-25"
  >
    <button
      className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedSecondary-14"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Cancel
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-26"
  >
    <button
      className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-text-6 MuiButton-textPrimary-7"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Back
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-27"
  >
    <button
      className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-fullWidth-20"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-5"
      >
        Full Width
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1 MuiBox-root-28"
  >
    <button
      aria-label="Export as CSV"
      className="MuiButtonBase-root-21 MuiFab-root-33 makeStyles-root-29 MuiFab-extended-37 makeStyles-extended-30 MuiFab-secondary-36 makeStyles-secondary-32 MuiFab-sizeSmall-41 makeStyles-sizeSmall-31"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiFab-label-34"
      >
        <div
          className="MuiBox-root-1 MuiBox-root-43"
        >
          <img
            alt="Download"
            className="makeStyles-root-44"
            height={16}
            src="download.svg"
            width={16}
          />
        </div>
        <div
          className="MuiBox-root-1 MuiBox-root-49"
        >
          <h6
            className="MuiTypography-root-52 MuiTypography-subtitle2-64 MuiTypography-colorTextPrimary-77"
          >
            Download
          </h6>
        </div>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components Hairline 1`] = `
Array [
  <div
    className="MuiBox-root-92 MuiBox-root-93"
  >
    <p
      className="MuiTypography-root-96 MuiTypography-body1-98"
    >
      Regular hairline without margin
    </p>
    <div
      className="MuiBox-root-92 MuiBox-root-126"
    />
  </div>,
  <div
    className="MuiBox-root-92 MuiBox-root-127"
  >
    <p
      className="MuiTypography-root-96 MuiTypography-body1-98"
    >
      Regular hairline with unit 1 margin
    </p>
    <div
      className="MuiBox-root-92 MuiBox-root-128"
    />
  </div>,
  <div
    className="MuiBox-root-92 MuiBox-root-129"
  >
    <p
      className="MuiTypography-root-96 MuiTypography-body1-98"
    >
      Regular hairline with unit 4 margin
    </p>
    <div
      className="MuiBox-root-92 MuiBox-root-130"
    />
  </div>,
  <div
    className="MuiBox-root-92 MuiBox-root-131"
  >
    <p
      className="MuiTypography-root-96 MuiTypography-body1-98"
    >
      Hairline with custom color
    </p>
    <div
      className="MuiBox-root-92 MuiBox-root-132"
    />
  </div>,
]
`;

exports[`Storyshots Components Images 1`] = `
<div
  className="MuiBox-root-133 MuiBox-root-134"
>
  <div
    className="MuiBox-root-133 MuiBox-root-135"
  >
    <img
      alt="Iov Logo"
      className="makeStyles-root-136"
      src="iov-logo.png"
    />
  </div>
  <div
    className="MuiBox-root-133 MuiBox-root-141"
  >
    <div
      className="MuiBox-root-133 MuiBox-root-142"
    >
      <img
        alt="Download"
        className="makeStyles-root-136"
        height={16}
        src="download.svg"
        width={16}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components Layout 1`] = `
<div
  className="MuiBox-root-143 MuiBox-root-144"
>
  <div
    className="MuiBox-root-143 MuiBox-root-145"
  >
    <h4
      className="MuiTypography-root-148 MuiTypography-h4-156 MuiTypography-colorPrimary-171 makeStyles-inline-146"
    >
      Title
    </h4>
    <h4
      className="MuiTypography-root-148 MuiTypography-h4-156 makeStyles-inline-146"
    >
       
      storybook
    </h4>
  </div>
  <div
    className="MuiBox-root-143 MuiBox-root-178"
  >
    <h6
      className="MuiTypography-root-148 MuiTypography-h6-158"
    >
      Layout content
    </h6>
  </div>
  <div
    className="MuiBox-root-143 MuiBox-root-179"
  />
  <div
    className="MuiBox-root-143 MuiBox-root-180"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-181"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Components Switch 1`] = `
Array [
  <div
    className="MuiBox-root-186 MuiBox-root-187"
  >
    <label
      className="MuiFormControlLabel-root-188"
    >
      <span
        className="MuiSwitch-root-194"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root-218 MuiIconButton-root-209 PrivateSwitchBase-root-205 MuiSwitch-switchBase-197 MuiSwitch-colorPrimary-198"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-217"
          >
            <span
              className="MuiSwitch-thumb-203"
            />
            <input
              className="PrivateSwitchBase-input-208 MuiSwitch-input-202"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
        </span>
        <span
          className="MuiSwitch-track-204"
        />
      </span>
      <span
        className="MuiTypography-root-221 MuiTypography-body1-223 MuiFormControlLabel-label-193"
      >
        With label
      </span>
    </label>
  </div>,
  <div
    className="MuiBox-root-186 MuiBox-root-251"
  >
    <label
      className="MuiFormControlLabel-root-188"
    >
      <span
        className="MuiSwitch-root-194"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root-218 MuiIconButton-root-209 PrivateSwitchBase-root-205 MuiSwitch-switchBase-197 MuiSwitch-colorPrimary-198"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-217"
          >
            <span
              className="MuiSwitch-thumb-203"
            />
            <input
              className="PrivateSwitchBase-input-208 MuiSwitch-input-202"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
        </span>
        <span
          className="MuiSwitch-track-204"
        />
      </span>
      <span
        className="MuiTypography-root-221 MuiTypography-body1-223 MuiFormControlLabel-label-193"
      />
    </label>
  </div>,
]
`;

exports[`Storyshots Components Toasts 1`] = `
Array [
  <div
    className="MuiBox-root-345 MuiBox-root-346"
  >
    <div
      className="MuiBox-root-345 MuiBox-root-347"
    >
      <div
        className="MuiBox-root-345 MuiBox-root-348"
      >
        <button
          className="MuiButtonBase-root-366 MuiButton-root-349 MuiButton-contained-357 MuiButton-containedPrimary-358"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-350"
          >
            Click to generate INFO toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root-371 MuiTypography-body1-373"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root-371 MuiTypography-body2-372 MuiPaper-root-412 MuiPaper-elevation6-420 MuiSnackbarContent-root-409 makeStyles-info-403"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message-410"
        >
          <div
            className="MuiBox-root-345 MuiBox-root-439 makeStyles-message-407"
          >
            <div
              className="makeStyles-iconBackground-408"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-440"
                height={24}
                src="success.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root-371 MuiTypography-subtitle1-382 makeStyles-info-403"
            >
              Hi INFO
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action-411"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root-366 MuiIconButton-root-445 MuiIconButton-colorSecondary-450"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-453"
            >
              <img
                alt="Close"
                className="makeStyles-root-440"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root-345 MuiBox-root-454"
    >
      <div
        className="MuiBox-root-345 MuiBox-root-455"
      >
        <button
          className="MuiButtonBase-root-366 MuiButton-root-349 MuiButton-contained-357 MuiButton-containedPrimary-358"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-350"
          >
            Click to generate WARN toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root-371 MuiTypography-body1-373"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root-371 MuiTypography-body2-372 MuiPaper-root-412 MuiPaper-elevation6-420 MuiSnackbarContent-root-409 makeStyles-warning-404"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message-410"
        >
          <div
            className="MuiBox-root-345 MuiBox-root-456 makeStyles-message-407"
          >
            <div
              className="makeStyles-iconBackground-408"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-440"
                height={24}
                src="warning.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root-371 MuiTypography-subtitle1-382 makeStyles-warning-404"
            >
              Hi WARN
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action-411"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root-366 MuiIconButton-root-445 MuiIconButton-colorSecondary-450"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-453"
            >
              <img
                alt="Close"
                className="makeStyles-root-440"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root-345 MuiBox-root-457"
    >
      <div
        className="MuiBox-root-345 MuiBox-root-458"
      >
        <button
          className="MuiButtonBase-root-366 MuiButton-root-349 MuiButton-contained-357 MuiButton-containedPrimary-358"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-350"
          >
            Click to generate ERROR toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root-371 MuiTypography-body1-373"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root-371 MuiTypography-body2-372 MuiPaper-root-412 MuiPaper-elevation6-420 MuiSnackbarContent-root-409 makeStyles-error-402"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message-410"
        >
          <div
            className="MuiBox-root-345 MuiBox-root-459 makeStyles-message-407"
          >
            <div
              className="makeStyles-iconBackground-408"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-440"
                height={24}
                src="error.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root-371 MuiTypography-subtitle1-382 makeStyles-error-402"
            >
              Hi ERR
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action-411"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root-366 MuiIconButton-root-445 MuiIconButton-colorSecondary-450"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-453"
            >
              <img
                alt="Close"
                className="makeStyles-root-440"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  " ",
]
`;

exports[`Storyshots Components Tooltip 1`] = `
Array [
  <div
    className="MuiBox-root-262 MuiBox-root-263"
  >
    <div
      className="makeStyles-container-265"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-268"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
  <div
    className="MuiBox-root-262 MuiBox-root-273"
  >
    <p
      className="MuiTypography-root-276 MuiTypography-body1-278 makeStyles-inline-274"
      style={
        Object {
          "marginRight": "4px",
        }
      }
    >
      Loooooooooooooooooooooooooooooooooong text
    </p>
    <div
      className="makeStyles-container-265"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-268"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
]
`;

exports[`Storyshots Components Typography 1`] = `
Array [
  <h6
    className="MuiTypography-root-308 MuiTypography-subtitle1-319 MuiTypography-colorPrimary-331"
  >
    H4
  </h6>,
  <h4
    className="MuiTypography-root-308 MuiTypography-h4-316"
  >
    Main headings
  </h4>,
  <h6
    className="MuiTypography-root-308 MuiTypography-subtitle1-319 MuiTypography-colorPrimary-331"
  >
    H5
  </h6>,
  <h5
    className="MuiTypography-root-308 MuiTypography-h5-317"
  >
    Heading 2
  </h5>,
  <h6
    className="MuiTypography-root-308 MuiTypography-subtitle1-319 MuiTypography-colorPrimary-331"
  >
    H6
  </h6>,
  <h6
    className="MuiTypography-root-308 MuiTypography-h6-318"
  >
    Subheading
  </h6>,
  <h6
    className="MuiTypography-root-308 MuiTypography-subtitle1-319 MuiTypography-colorPrimary-331"
  >
    body1
  </h6>,
  <p
    className="MuiTypography-root-308 MuiTypography-body1-310"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-308 MuiTypography-subtitle1-319 MuiTypography-colorPrimary-331"
  >
    body2
  </h6>,
  <p
    className="MuiTypography-root-308 MuiTypography-body2-309"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-308 MuiTypography-subtitle1-319 MuiTypography-colorPrimary-331"
  >
    subtitle1
  </h6>,
  <h6
    className="MuiTypography-root-308 MuiTypography-subtitle1-319"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-308 MuiTypography-subtitle1-319 MuiTypography-colorPrimary-331"
  >
    subtitle2
  </h6>,
  <h6
    className="MuiTypography-root-308 MuiTypography-subtitle2-320"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-308 MuiTypography-subtitle1-319 MuiTypography-colorPrimary-331"
  >
    Inline styles
  </h6>,
  <h6
    className="MuiTypography-root-308 MuiTypography-subtitle2-320 MuiTypography-colorPrimary-331 makeStyles-inline-306"
  >
    First part of the text. 
  </h6>,
  <h6
    className="MuiTypography-root-308 MuiTypography-subtitle2-320 makeStyles-inline-306"
  >
    Second part of the text.
  </h6>,
]
`;

exports[`Storyshots Components/forms Form 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root-471 MuiFormControl-marginNormal-472 MuiTextField-root-470"
  >
    <label
      className="MuiFormLabel-root-487 MuiInputLabel-root-475 MuiInputLabel-formControl-481 MuiInputLabel-animated-484 MuiInputLabel-shrink-483"
      data-shrink={true}
    >
      Unique Identifier
    </label>
    <div
      className="MuiInputBase-root-507 MuiOutlinedInput-root-494 MuiInputBase-formControl-508"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="PrivateNotchedOutline-root-523 MuiOutlinedInput-notchedOutline-501"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="PrivateNotchedOutline-legend-524"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-517 MuiOutlinedInput-input-502"
        disabled={false}
        name="textFieldUniqueIdentifier"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Unique Identifier"
        required={false}
        type="text"
      />
    </div>
  </div>
  <div
    className="MuiBox-root-525 MuiBox-root-526"
  >
    <div
      className="makeStyles-dropdown-527"
      onClick={[Function]}
    >
      <div
        className="MuiInputBase-root-507 makeStyles-root-528 makeStyles-root-530"
        onClick={[Function]}
        role="button"
      >
        <input
          autoComplete="off"
          className="MuiInputBase-input-517 makeStyles-input-529"
          name="selectFieldUniqueIdentifier"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="text"
          value=""
        />
      </div>
      <img
        alt="Phone Menu"
        className="makeStyles-root-531 makeStyles-noShrink-532"
        height="5"
        src="selectChevron.svg"
        width="8"
      />
    </div>
  </div>
  <button
    className="MuiButtonBase-root-553 MuiButtonBase-disabled-554 MuiButton-root-536 MuiButton-contained-544 MuiButton-containedPrimary-545 MuiButton-disabled-548"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="-1"
    type="submit"
  >
    <span
      className="MuiButton-label-537"
    >
      Submit
    </span>
  </button>
  <pre>
    {}
  </pre>
</form>
`;

exports[`Storyshots Components/forms TextFieldForm 1`] = `
<div
  className="MuiBox-root-556 MuiBox-root-557"
>
  <div
    className="MuiBox-root-556 MuiBox-root-558"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-560 MuiFormControl-marginNormal-561 MuiTextField-root-559"
      >
        <label
          className="MuiFormLabel-root-576 MuiFormLabel-error-579 MuiInputLabel-error-567 MuiInputLabel-root-564 MuiInputLabel-formControl-570 MuiInputLabel-animated-573 MuiInputLabel-shrink-572"
          data-shrink={true}
        >
          Error
        </label>
        <div
          className="MuiInputBase-root-596 MuiOutlinedInput-root-583 MuiInputBase-error-602 MuiOutlinedInput-error-588 MuiInputBase-formControl-597"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-612 MuiOutlinedInput-notchedOutline-590"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-613"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={true}
            className="MuiInputBase-input-606 MuiOutlinedInput-input-591"
            defaultValue="Standard Error"
            disabled={false}
            name="field-with-error"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
        <p
          className="MuiFormHelperText-root-614 MuiFormHelperText-contained-618 MuiFormHelperText-error-615"
        >
          This is an error message
        </p>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-556 MuiBox-root-622"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-560 MuiFormControl-marginNormal-561 MuiTextField-root-559"
      >
        <label
          className="MuiFormLabel-root-576 MuiInputLabel-root-564 MuiInputLabel-formControl-570 MuiInputLabel-animated-573 MuiInputLabel-shrink-572"
          data-shrink={true}
        >
          Filled
        </label>
        <div
          className="MuiInputBase-root-596 MuiOutlinedInput-root-583 MuiInputBase-formControl-597"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-612 MuiOutlinedInput-notchedOutline-590"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-613"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-606 MuiOutlinedInput-input-591"
            defaultValue="test*iov"
            disabled={false}
            name="field-filled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-556 MuiBox-root-623"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-560 MuiFormControl-marginNormal-561 MuiTextField-root-559"
      >
        <label
          className="MuiFormLabel-root-576 MuiFormLabel-disabled-578 MuiInputLabel-disabled-566 MuiInputLabel-root-564 MuiInputLabel-formControl-570 MuiInputLabel-animated-573 MuiInputLabel-shrink-572"
          data-shrink={true}
        >
          Disabled
        </label>
        <div
          className="MuiInputBase-root-596 MuiOutlinedInput-root-583 MuiInputBase-disabled-599 MuiOutlinedInput-disabled-585 MuiInputBase-formControl-597"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-612 MuiOutlinedInput-notchedOutline-590"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-613"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-606 MuiOutlinedInput-input-591 MuiInputBase-disabled-599 MuiOutlinedInput-disabled-585"
            defaultValue="Disabled input"
            disabled={true}
            name="standard-disabled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-556 MuiBox-root-624"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-560 MuiFormControl-marginNormal-561 MuiTextField-root-559"
      >
        <label
          className="MuiFormLabel-root-576 MuiInputLabel-root-564 MuiInputLabel-formControl-570 MuiInputLabel-animated-573 MuiInputLabel-shrink-572"
          data-shrink={true}
        >
          Empty
        </label>
        <div
          className="MuiInputBase-root-596 MuiOutlinedInput-root-583 MuiInputBase-formControl-597"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-612 MuiOutlinedInput-notchedOutline-590"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-613"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-606 MuiOutlinedInput-input-591"
            disabled={false}
            name="standard-with-placeholder"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="IOV or wallet address"
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-556 MuiBox-root-625"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-560 MuiFormControl-marginNormal-561 MuiTextField-root-559"
      >
        <label
          className="MuiFormLabel-root-576 MuiInputLabel-root-564 MuiInputLabel-formControl-570 MuiInputLabel-animated-573 MuiInputLabel-shrink-572"
          data-shrink={true}
        >
          Empty
        </label>
        <div
          className="MuiInputBase-root-596 MuiOutlinedInput-root-583 MuiInputBase-formControl-597"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-612 MuiOutlinedInput-notchedOutline-590"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-613"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-606 MuiOutlinedInput-input-591"
            defaultValue="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor"
            disabled={false}
            name="standard-with-placeholder"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Routes/Account Show account status 1`] = `
<div
  className="MuiBox-root-651 MuiBox-root-652"
  id="/signup_first"
>
  <h4
    className="MuiTypography-root-655 MuiTypography-h4-663 MuiTypography-colorPrimary-678 makeStyles-inline-653"
  >
    New
  </h4>
  <h4
    className="MuiTypography-root-655 MuiTypography-h4-663 makeStyles-inline-653"
  >
     Account
  </h4>
  <div
    className="MuiBox-root-651 MuiBox-root-685"
  />
  <form
    onSubmit={[Function]}
  >
    <div
      className="makeStyles-dropdown-686"
      onClick={[Function]}
    >
      <div
        className="MuiInputBase-root-690 makeStyles-root-687 makeStyles-root-689"
        onClick={[Function]}
        role="button"
      >
        <input
          autoComplete="off"
          className="MuiInputBase-input-700 makeStyles-input-688"
          name="SELECT_FIELD_ATTR"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="text"
          value=""
        />
      </div>
      <img
        alt="Phone Menu"
        className="makeStyles-root-706 makeStyles-noShrink-707"
        height="5"
        src="selectChevron.svg"
        width="8"
      />
    </div>
  </form>
  <div
    className="MuiBox-root-651 MuiBox-root-711"
  />
  <div
    className="MuiBox-root-651 MuiBox-root-712"
  >
    <div
      className="MuiBox-root-651 MuiBox-root-713"
    >
      acc
    </div>
    <div
      className="MuiBox-root-651 MuiBox-root-714"
    >
      acc
    </div>
    <div
      className="MuiBox-root-651 MuiBox-root-715"
    >
      acc
    </div>
  </div>
  <div
    className="MuiBox-root-651 MuiBox-root-716"
  />
  <div
    className="MuiBox-root-651 MuiBox-root-717"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-706"
      src="iov-logo.png"
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Login Login page 1`] = `
<div
  className="MuiBox-root-725 MuiBox-root-726"
  id="/login"
>
  <div
    className="MuiBox-root-725 MuiBox-root-727"
  >
    <h4
      className="MuiTypography-root-730 MuiTypography-h4-738 MuiTypography-colorPrimary-753 makeStyles-inline-728"
    >
      Log
    </h4>
    <h4
      className="MuiTypography-root-730 MuiTypography-h4-738 makeStyles-inline-728"
    >
       
      In
    </h4>
  </div>
  <div
    className="MuiBox-root-725 MuiBox-root-760"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-725 MuiBox-root-761"
      >
        <div
          className="MuiFormControl-root-763 MuiFormControl-marginNormal-764 MuiFormControl-fullWidth-766 MuiTextField-root-762"
        >
          <div
            className="MuiInputBase-root-780 MuiOutlinedInput-root-767 MuiInputBase-fullWidth-789 MuiInputBase-formControl-781"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="PrivateNotchedOutline-root-796 MuiOutlinedInput-notchedOutline-774"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="PrivateNotchedOutline-legend-797"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-790 MuiOutlinedInput-input-775"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-725 MuiBox-root-798"
      >
        <div
          className="MuiBox-root-725 MuiBox-root-799"
        >
          <button
            className="MuiButtonBase-root-817 MuiButtonBase-disabled-818 MuiButton-root-800 MuiButton-contained-808 MuiButton-containedPrimary-809 MuiButton-disabled-812 MuiButton-fullWidth-816"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="submit"
          >
            <span
              className="MuiButton-label-801"
            >
              Continue
            </span>
          </button>
        </div>
      </div>
    </form>
    <div
      className="MuiBox-root-725 MuiBox-root-820"
    >
      <div
        className="MuiBox-root-725 MuiBox-root-821"
      >
        <a
          href="/welcome"
          onClick={[Function]}
        >
          <h6
            className="MuiTypography-root-730 MuiTypography-subtitle2-742 MuiTypography-colorPrimary-753 makeStyles-inline-728 makeStyles-link-729"
          >
            Restore account
          </h6>
        </a>
      </div>
      <div
        className="MuiBox-root-725 MuiBox-root-822"
      >
        <a
          href="/welcome"
          onClick={[Function]}
        >
          <h6
            className="MuiTypography-root-730 MuiTypography-subtitle2-742 MuiTypography-colorPrimary-753 makeStyles-inline-728 makeStyles-link-729"
          >
            More options
          </h6>
        </a>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-725 MuiBox-root-823"
  />
  <div
    className="MuiBox-root-725 MuiBox-root-824"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-825"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Recovery phrase Main 1`] = `
<div
  className="MuiBox-root-830 MuiBox-root-831"
  id="/recovery-phrase"
>
  <div
    className="MuiBox-root-830 MuiBox-root-832"
  >
    <h4
      className="MuiTypography-root-835 MuiTypography-h4-843 MuiTypography-colorPrimary-858 makeStyles-inline-833"
    >
      Recovery
    </h4>
    <h4
      className="MuiTypography-root-835 MuiTypography-h4-843 makeStyles-inline-833"
    >
       
      phrase
    </h4>
  </div>
  <div
    className="MuiBox-root-830 MuiBox-root-865"
  >
    <div
      className="MuiBox-root-830 MuiBox-root-866"
    >
      <h6
        className="MuiTypography-root-835 MuiTypography-subtitle2-847"
      >
        Your Recovery Phrase are 12 random words that are set in a particular order that acts as a tool to recover or back up your wallet on any platform.
      </h6>
    </div>
    <div
      className="MuiBox-root-830 MuiBox-root-867"
    >
      <button
        aria-label="Export as CSV"
        className="MuiButtonBase-root-882 MuiFab-root-872 makeStyles-root-868 MuiFab-extended-876 makeStyles-extended-869 MuiFab-secondary-875 makeStyles-secondary-871 MuiFab-sizeSmall-880 makeStyles-sizeSmall-870"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiFab-label-873"
        >
          <div
            className="MuiBox-root-830 MuiBox-root-885"
          >
            <img
              alt="Download"
              className="makeStyles-root-886"
              height={16}
              src="download.svg"
              width={16}
            />
          </div>
          <div
            className="MuiBox-root-830 MuiBox-root-891"
          >
            <h6
              className="MuiTypography-root-835 MuiTypography-subtitle2-847 MuiTypography-colorTextPrimary-860"
            >
              Export as .PDF
            </h6>
          </div>
        </span>
      </button>
    </div>
    <div
      className="MuiBox-root-830 MuiBox-root-892"
    >
      <p
        className="MuiTypography-root-835 MuiTypography-body1-837 makeStyles-inline-833"
      >
        
      </p>
    </div>
    <div
      className="MuiBox-root-830 MuiBox-root-893"
    >
      <div
        className="MuiBox-root-830 MuiBox-root-894"
      >
        <button
          className="MuiButtonBase-root-882 MuiButton-root-895 MuiButton-text-897 MuiButton-textPrimary-898 MuiButton-fullWidth-911"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-896"
          >
            Back
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-830 MuiBox-root-912"
  />
  <div
    className="MuiBox-root-830 MuiBox-root-913"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-886"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Restore Account Restore 1`] = `
<div
  className="MuiBox-root-924 MuiBox-root-925"
>
  <div
    className="MuiBox-root-924 MuiBox-root-926"
  >
    <h4
      className="MuiTypography-root-929 MuiTypography-h4-937 MuiTypography-colorPrimary-952 makeStyles-inline-927"
    >
      Restore
    </h4>
    <h4
      className="MuiTypography-root-929 MuiTypography-h4-937 makeStyles-inline-927"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-924 MuiBox-root-959"
  >
    <h6
      className="MuiTypography-root-929 MuiTypography-subtitle1-940 makeStyles-inline-927"
    >
      Restore your account with your recovery words. Enter your recovery words here.
    </h6>
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-924 MuiBox-root-960"
      >
        <div
          className="MuiFormControl-root-962 MuiFormControl-marginNormal-963 MuiFormControl-fullWidth-965 MuiTextField-root-961"
        >
          <div
            className="MuiInputBase-root-979 MuiOutlinedInput-root-966 MuiInputBase-fullWidth-988 MuiInputBase-formControl-980"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="PrivateNotchedOutline-root-995 MuiOutlinedInput-notchedOutline-973"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="PrivateNotchedOutline-legend-996"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-989 MuiOutlinedInput-input-974"
              disabled={false}
              name="recoveryPhraseField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Recovery phrase"
              required={false}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-924 MuiBox-root-997"
      >
        <div
          className="MuiBox-root-924 MuiBox-root-998"
        >
          <button
            className="MuiButtonBase-root-1016 MuiButton-root-999 MuiButton-text-1001 MuiButton-textPrimary-1002 MuiButton-fullWidth-1015"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-1000"
            >
              Back
            </span>
          </button>
        </div>
        <div
          className="MuiBox-root-924 MuiBox-root-1019"
        >
          <button
            className="MuiButtonBase-root-1016 MuiButton-root-999 MuiButton-contained-1007 MuiButton-containedPrimary-1008 MuiButton-fullWidth-1015"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="submit"
          >
            <span
              className="MuiButton-label-1000"
            >
              Restore
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-924 MuiBox-root-1020"
  />
  <div
    className="MuiBox-root-924 MuiBox-root-1021"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1022"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup New account page 1`] = `
<div
  className="MuiBox-root-1037 MuiBox-root-1038"
  id="/signup1"
>
  <div
    className="MuiBox-root-1037 MuiBox-root-1039"
  >
    <h4
      className="MuiTypography-root-1042 MuiTypography-h4-1050 MuiTypography-colorPrimary-1065 makeStyles-inline-1040"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-1042 MuiTypography-h4-1050 makeStyles-inline-1040"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-1037 MuiBox-root-1072"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-1037 MuiBox-root-1073"
      >
        <div
          className="MuiFormControl-root-1075 MuiFormControl-marginNormal-1076 MuiFormControl-fullWidth-1078 MuiTextField-root-1074"
        >
          <label
            className="MuiFormLabel-root-1091 MuiFormLabel-required-1096 MuiInputLabel-required-1083 MuiInputLabel-root-1079 MuiInputLabel-formControl-1085 MuiInputLabel-animated-1088 MuiInputLabel-shrink-1087"
            data-shrink={true}
          >
            Account name
            <span
              className="MuiFormLabel-asterisk-1097 MuiInputLabel-asterisk-1084"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root-1111 MuiOutlinedInput-root-1098 MuiInputBase-fullWidth-1120 MuiInputBase-formControl-1112"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="PrivateNotchedOutline-root-1127 MuiOutlinedInput-notchedOutline-1105"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="PrivateNotchedOutline-legend-1128"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-1121 MuiOutlinedInput-input-1106"
              disabled={false}
              name="accountNameField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Account name"
              required={true}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-1037 MuiBox-root-1129"
      >
        <div
          className="MuiFormControl-root-1075 MuiFormControl-marginNormal-1076 MuiFormControl-fullWidth-1078 MuiTextField-root-1074"
        >
          <label
            className="MuiFormLabel-root-1091 MuiFormLabel-required-1096 MuiInputLabel-required-1083 MuiInputLabel-root-1079 MuiInputLabel-formControl-1085 MuiInputLabel-animated-1088 MuiInputLabel-shrink-1087"
            data-shrink={true}
          >
            Password
            <span
              className="MuiFormLabel-asterisk-1097 MuiInputLabel-asterisk-1084"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root-1111 MuiOutlinedInput-root-1098 MuiInputBase-fullWidth-1120 MuiInputBase-formControl-1112"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="PrivateNotchedOutline-root-1127 MuiOutlinedInput-notchedOutline-1105"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="PrivateNotchedOutline-legend-1128"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-1121 MuiOutlinedInput-input-1106"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-1037 MuiBox-root-1130"
      >
        <div
          className="MuiFormControl-root-1075 MuiFormControl-marginNormal-1076 MuiFormControl-fullWidth-1078 MuiTextField-root-1074"
        >
          <label
            className="MuiFormLabel-root-1091 MuiFormLabel-required-1096 MuiInputLabel-required-1083 MuiInputLabel-root-1079 MuiInputLabel-formControl-1085 MuiInputLabel-animated-1088 MuiInputLabel-shrink-1087"
            data-shrink={true}
          >
            Confirm Password
            <span
              className="MuiFormLabel-asterisk-1097 MuiInputLabel-asterisk-1084"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root-1111 MuiOutlinedInput-root-1098 MuiInputBase-fullWidth-1120 MuiInputBase-formControl-1112"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="PrivateNotchedOutline-root-1127 MuiOutlinedInput-notchedOutline-1105"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="PrivateNotchedOutline-legend-1128"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-1121 MuiOutlinedInput-input-1106"
              disabled={false}
              name="passwordConfirmInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Confirm Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-1037 MuiBox-root-1131"
      >
        <div
          className="MuiBox-root-1037 MuiBox-root-1132"
        >
          <button
            className="MuiButtonBase-root-1150 MuiButton-root-1133 MuiButton-text-1135 MuiButton-textPrimary-1136 MuiButton-fullWidth-1149"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-1134"
            >
              Back
            </span>
          </button>
        </div>
        <div
          className="MuiBox-root-1037 MuiBox-root-1153"
        >
          <button
            className="MuiButtonBase-root-1150 MuiButtonBase-disabled-1151 MuiButton-root-1133 MuiButton-contained-1141 MuiButton-containedPrimary-1142 MuiButton-disabled-1145 MuiButton-fullWidth-1149"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="submit"
          >
            <span
              className="MuiButton-label-1134"
            >
              Continue
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-1037 MuiBox-root-1154"
  />
  <div
    className="MuiBox-root-1037 MuiBox-root-1155"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1156"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Recovery Phrase page 1`] = `
<div
  className="MuiBox-root-1171 MuiBox-root-1172"
  id="/signup2"
>
  <div
    className="MuiBox-root-1171 MuiBox-root-1173"
  >
    <h4
      className="MuiTypography-root-1176 MuiTypography-h4-1184 MuiTypography-colorPrimary-1199 makeStyles-inline-1174"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-1176 MuiTypography-h4-1184 makeStyles-inline-1174"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-1171 MuiBox-root-1206"
  >
    <div
      className="MuiBox-root-1171 MuiBox-root-1207"
    >
      <div
        className="MuiBox-root-1171 MuiBox-root-1208"
      >
        <div
          className="MuiBox-root-1171 MuiBox-root-1209"
        >
          <h6
            className="MuiTypography-root-1176 MuiTypography-subtitle2-1188 makeStyles-inline-1174"
          >
            Activate Recovery Phrase?
          </h6>
        </div>
        <div
          className="makeStyles-container-1211"
          onClick={[Function]}
        >
          <img
            alt="Info"
            className="makeStyles-root-1214"
            height={16}
            src="info_normal.svg"
            width={16}
          />
        </div>
      </div>
      <label
        className="MuiFormControlLabel-root-1219"
      >
        <span
          className="MuiSwitch-root-1225"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root-1249 MuiIconButton-root-1240 PrivateSwitchBase-root-1236 MuiSwitch-switchBase-1228 MuiSwitch-colorPrimary-1229"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label-1248"
            >
              <span
                className="MuiSwitch-thumb-1234"
              />
              <input
                className="PrivateSwitchBase-input-1239 MuiSwitch-input-1233"
                onChange={[Function]}
                type="checkbox"
              />
            </span>
          </span>
          <span
            className="MuiSwitch-track-1235"
          />
        </span>
        <span
          className="MuiTypography-root-1176 MuiTypography-body1-1178 MuiFormControlLabel-label-1224"
        />
      </label>
    </div>
    <div
      className="MuiBox-root-1171 MuiBox-root-1252"
    >
      <p
        className="MuiTypography-root-1176 MuiTypography-body1-1178 makeStyles-inline-1174"
      >
        
      </p>
    </div>
    <div
      className="MuiBox-root-1171 MuiBox-root-1253"
    >
      <div
        className="MuiBox-root-1171 MuiBox-root-1254"
      >
        <button
          className="MuiButtonBase-root-1249 MuiButton-root-1255 MuiButton-text-1257 MuiButton-textPrimary-1258 MuiButton-fullWidth-1271"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1256"
          >
            Back
          </span>
        </button>
      </div>
      <div
        className="MuiBox-root-1171 MuiBox-root-1272"
      >
        <button
          className="MuiButtonBase-root-1249 MuiButton-root-1255 MuiButton-contained-1263 MuiButton-containedPrimary-1264 MuiButton-fullWidth-1271"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1256"
          >
            Continue
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-1171 MuiBox-root-1273"
  />
  <div
    className="MuiBox-root-1171 MuiBox-root-1274"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1214"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Security hint page 1`] = `
<div
  className="MuiBox-root-1285 MuiBox-root-1286"
  id="/signup3"
>
  <div
    className="MuiBox-root-1285 MuiBox-root-1287"
  >
    <h4
      className="MuiTypography-root-1290 MuiTypography-h4-1298 MuiTypography-colorPrimary-1313 makeStyles-inline-1288"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-1290 MuiTypography-h4-1298 makeStyles-inline-1288"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-1285 MuiBox-root-1320"
  >
    <h6
      className="MuiTypography-root-1290 MuiTypography-subtitle1-1301 makeStyles-inline-1288"
    >
      To help you remember your details in the future please provide a security hint:
    </h6>
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-1285 MuiBox-root-1321"
      >
        <div
          className="MuiFormControl-root-1323 MuiFormControl-marginNormal-1324 MuiFormControl-fullWidth-1326 MuiTextField-root-1322"
        >
          <div
            className="MuiInputBase-root-1340 MuiOutlinedInput-root-1327 MuiInputBase-fullWidth-1349 MuiInputBase-formControl-1341"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="PrivateNotchedOutline-root-1356 MuiOutlinedInput-notchedOutline-1334"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="PrivateNotchedOutline-legend-1357"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-1350 MuiOutlinedInput-input-1335"
              disabled={false}
              name="securityHintField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Security hint"
              required={false}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-1285 MuiBox-root-1358"
      >
        <div
          className="MuiBox-root-1285 MuiBox-root-1359"
        >
          <button
            className="MuiButtonBase-root-1377 MuiButton-root-1360 MuiButton-text-1362 MuiButton-textPrimary-1363 MuiButton-fullWidth-1376"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-1361"
            >
              Back
            </span>
          </button>
        </div>
        <div
          className="MuiBox-root-1285 MuiBox-root-1380"
        >
          <button
            className="MuiButtonBase-root-1377 MuiButton-root-1360 MuiButton-contained-1368 MuiButton-containedPrimary-1369 MuiButton-fullWidth-1376"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="submit"
          >
            <span
              className="MuiButton-label-1361"
            >
              Create
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-1285 MuiBox-root-1381"
  />
  <div
    className="MuiBox-root-1285 MuiBox-root-1382"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1383"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Welcome Welcome page 1`] = `
<div
  className="MuiBox-root-1398 MuiBox-root-1399"
  id="/welcome"
>
  <div
    className="MuiBox-root-1398 MuiBox-root-1400"
  >
    <h4
      className="MuiTypography-root-1403 MuiTypography-h4-1411 MuiTypography-colorPrimary-1426 makeStyles-inline-1401"
    >
      Welcome
    </h4>
    <h4
      className="MuiTypography-root-1403 MuiTypography-h4-1411 makeStyles-inline-1401"
    >
       
      to your IOV manager
    </h4>
  </div>
  <div
    className="MuiBox-root-1398 MuiBox-root-1433"
  >
    <p
      className="MuiTypography-root-1403 MuiTypography-body1-1405 makeStyles-inline-1401"
    >
      This plugin lets you manage all your accounts in one place.
    </p>
    <div
      className="MuiBox-root-1398 MuiBox-root-1434"
    />
    <button
      className="MuiButtonBase-root-1452 MuiButton-root-1435 MuiButton-contained-1443 MuiButton-containedPrimary-1444 MuiButton-fullWidth-1451"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1436"
      >
        Log in
      </span>
    </button>
    <div
      className="MuiBox-root-1398 MuiBox-root-1455"
    />
    <button
      className="MuiButtonBase-root-1452 MuiButton-root-1435 MuiButton-contained-1443 MuiButton-containedPrimary-1444 MuiButton-fullWidth-1451"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1436"
      >
        New account
      </span>
    </button>
    <div
      className="MuiBox-root-1398 MuiBox-root-1456"
    />
    <button
      className="MuiButtonBase-root-1452 MuiButton-root-1435 MuiButton-contained-1443 MuiButton-containedPrimary-1444 MuiButton-fullWidth-1451"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1436"
      >
        Import account
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1398 MuiBox-root-1457"
  />
  <div
    className="MuiBox-root-1398 MuiBox-root-1458"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1459"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;
